2001-10-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.[ch]: refactored to be the main class for GDA client
	applications

	* Makefile.am: install headers in version-based directory

2001-09-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-data-model-recordset.[ch]: new class, to create a GdaDataModel
	from a GdaRecordset

2001-08-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (run_export_cb): s/gda_fieldtype_2_string/gda_util_gdatype_to_string

2001-08-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* first successfull compilation on GNOME 2.x

	* gda-value.h: moved to gda-common

2001-08-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-recordset.[ch]:
	* gda-command.[ch]:
	* gda-connection-pool.[ch]:
	* gda-connection.[ch]:
	* gda-export.[ch]:
	* gda-batch.[ch]: switched to GObject

2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-recordset.c (gda_recordset_to_array): add this function from
	the gnome-1-x branch

2001-08-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.[ch]: removed, since they'll be moved to gda-common

2001-08-03  Rodrigo Moya <rodrigo@gnome-db.org>

        * Makefile.am: renamed library for GNOME 2 platform, and install
        headers in $(includedir)/gnome/2/gda

2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_run): add a GdaExportFlags parameter for
	clients to be able to specify several flags for the export process,
	such as export table data or not
	(run_export_cb): increment num_found to know how many objects were
	treated in one pass, and if 0, finish the export process

2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_run, gda_export_stop): implemented the
	functions to run (asynchronously) the export process. When finished,
	the GdaExport will emit its "finished" signal

2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_select_table_list): new function

2001-07-24  Rodrigo Moya <rodrigo@gnome-db.org>
