@@ -1,3 +1,8 @@
+2001-10-12  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-client.[ch]: make it implement the GNOME::Database::Client
+	CORBA interface
+
 2001-10-07  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-client.[ch]: refactored to be the main class for GDA client
